final pushgit add .

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Sophia Williams</title>
+    <title>Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./assets/style.css" />
@@ -13,7 +13,7 @@
     <header>
         <h1>Sophia Williams</h1>
         <section class="profile-picture">
-            <img src="./assets/profile.jpeg" alt="profile picture" />
+            <img src="./assets/profile2.JPG" alt="profile picture" />
         </section>
     </header>
 
@@ -43,8 +43,8 @@
             </p>
         </article>
         <!-- My Work  -->
+        <h2 class="my-work">My Work</h2>
         <article class="projects">
-            <h2>My Work</h2>
             <section class="application">
                 <header>Project 1</header>
                 <img src="./assets/building.jpeg" alt="Project 1" id="project1"/>
